--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,13 @@
 import org.asciidoctor.gradle.jvm.AsciidoctorTask
-import com.neo4j.gradle.wordpress.WordPressPlugin
 import com.neo4j.gradle.wordpress.WordPressUploadTask
 
 plugins {
     id 'org.asciidoctor.jvm.gems' version '3.1.0' apply false
     id 'org.asciidoctor.jvm.convert' version '3.1.0' apply false
-    // FIXME: use the published version once parent page will be supported
-    //id "com.neo4j.gradle.wordpress.WordPressPlugin" version "0.0.1"
+    id "com.neo4j.gradle.wordpress.WordPressPlugin" version "0.0.2"
 }
 
 apply plugin: 'org.asciidoctor.jvm.gems'
-apply plugin: WordPressPlugin
 
 repositories {
     mavenCentral()
