--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,6 +12,10 @@ jobs:
     - uses: actions/setup-java@v1
       with:
         java-version: 11
+
+    - name: Ping
+      run: ping neo4j.com
+
     - name: Test
       uses: eskatos/gradle-command-action@v1
       with:
