--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,7 +14,7 @@ jobs:
         java-version: 11
 
     - name: Ping
-      run: ping neo4j.com
+      run: ping neo4j.com -c 5
 
     - name: Test
       uses: eskatos/gradle-command-action@v1
