Remove eskatos/gradle-command-action
I don't know why but this action produces a DNS issue in OkHttp @-@!

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,16 +12,9 @@ jobs:
     - uses: actions/setup-java@v1
       with:
         java-version: 11
-
-    - name: Install curl
-      run: sudo apt-get install curl
-    
-    - name: curl
-      run: curl neo4j.com
-
-    - name: Test
-      run:
-        ./gradlew wordPressUpload -Pwordpress-host="neo4j.com" -Pwordpress-username="$WORDPRESS_USER" -Pwordpress-password="$WORDPRESS_PASSWORD" -Pstage=production --stacktrace
+    - name: Publish
+      run: |
+        ./gradlew wordPressUpload -Pwordpress-host="neo4j.com" -Pwordpress-username="${WORDPRESS_USER}" -Pwordpress-password="${WORDPRESS_PASSWORD}" -Pstage=production
       env:
         WORDPRESS_USER: ${{ secrets.WORDPRESS_USER }}
         WORDPRESS_PASSWORD: ${{ secrets.WORDPRESS_PASSWORD }}
