--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,6 +10,10 @@ jobs:
     - uses: actions/setup-java@v1
       with:
         java-version: 11
+    - name: Check DNS
+      uses: eskatos/gradle-command-action@v1
+      with:
+        arguments: checkDNS
     - name: Test
       uses: eskatos/gradle-command-action@v1
       with:
