--- a/build.gradle
+++ b/build.gradle
@@ -78,9 +78,33 @@ task checkDNS() {
     }
 }
 
+def responseCount(Response response) {
+    def count = 1
+    def res = response.priorResponse
+    while (res != null) {
+        count++
+        res = res.priorResponse
+    }
+    return count
+}
+
 task getWordPress {
     doLast {
+        def username = project.hasProperty('wordpress-username') ? project.property('wordpress-username') : 'neo'
+        def password = project.hasProperty('wordpress-password') ? project.property('wordpress-password') : ''
+        def host = project.hasProperty('wordpress-host') ? project.property('wordpress-host') : 'localhost'
+        def scheme = 'https'
         def client = new OkHttpClient.Builder()
+                .authenticator(new Authenticator() {
+                    @Override
+                    Request authenticate(Route route, Response response) {
+                        if (responseCount(response) >= 3) {
+                            return null // unable to authenticate for the third time, we give up...
+                        }
+                        def credential = Credentials.basic(username, password)
+                        return response.request.newBuilder().header("Authorization", credential).build()
+                    }
+                })
                 .build()
         def httpUrl = new HttpUrl.Builder()
                 .scheme("https")
@@ -94,6 +118,7 @@ task getWordPress {
                 .build()
         def request = new Request.Builder()
                 .url(httpUrl)
+                .header("Authorization", Credentials.basic(username, password))
                 .get()
                 .build()
         def response = client.newCall(request).execute()
