--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,10 +18,11 @@ jobs:
     - name: Get pages (WordPress)
       uses: eskatos/gradle-command-action@v1
       with:
-        arguments: getWordPress -Pwordpress-host="neo4j.com" -Pwordpress-username="${WORDPRESS_USER}" -Pwordpress-password="${WORDPRESS_PASSWORD}"
+        arguments: getWordPress -Pwordpress-host="${WORDPRESS_HOST}" -Pwordpress-username="${WORDPRESS_USER}" -Pwordpress-password="${WORDPRESS_PASSWORD}"
       env:
         WORDPRESS_USER: ${{ secrets.WORDPRESS_USER }}
         WORDPRESS_PASSWORD: ${{ secrets.WORDPRESS_PASSWORD }}
+        WORDPRESS_HOST: "neo4j.com"
 
     - name: Test
       uses: eskatos/gradle-command-action@v1
