--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,8 +19,8 @@ jobs:
       run:
         ./gradlew getWordPress --info -Pwordpress-host="${WORDPRESS_HOST}" -Pwordpress-username="${WORDPRESS_USER}" -Pwordpress-password="${WORDPRESS_PASSWORD}"
       env:
-        WORDPRESS_USER: ${{ secrets.WORDPRESS_USER }}
-        WORDPRESS_PASSWORD: ${{ secrets.WORDPRESS_PASSWORD }}
+        WORDPRESS_USER: "${{ secrets.WORDPRESS_USER }}"
+        WORDPRESS_PASSWORD: "${{ secrets.WORDPRESS_PASSWORD }}"
         WORDPRESS_HOST: "neo4j.com"
         no_proxy: "neo4j.com"
 
