--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
 
     - name: Get pages (WordPress)
       run:
-        ./gradlew getWordPress --info -Pwordpress-host="${WORDPRESS_HOST}" -Pwordpress-username="${WORDPRESS_USER}" -Pwordpress-password="${WORDPRESS_PASSWORD}"
+        ./gradlew getWordPress --info -Pwordpress-host='"${WORDPRESS_HOST}"' -Pwordpress-username='"${WORDPRESS_USER}"' -Pwordpress-password='"${WORDPRESS_PASSWORD}"'
       env:
         WORDPRESS_USER: "${{ secrets.WORDPRESS_USER }}"
         WORDPRESS_PASSWORD: "${{ secrets.WORDPRESS_PASSWORD }}"
