--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
 
     - name: Get pages (WordPress)
       run:
-        ./gradlew getWordPress --info -Pwordpress-host='"${WORDPRESS_HOST}"' -Pwordpress-username='"${WORDPRESS_USER}"' -Pwordpress-password='"${WORDPRESS_PASSWORD}"'
+        ./gradlew getWordPress --info -Pwordpress-host='"${WORDPRESS_HOST}"' -Pwordpress-username='"${WORDPRESS_USER}"' -Pwordpress-password='"${WORDPRESS_PASSWORD}"' -Pstage=production --stacktrace
       env:
         WORDPRESS_USER: "${{ secrets.WORDPRESS_USER }}"
         WORDPRESS_PASSWORD: "${{ secrets.WORDPRESS_PASSWORD }}"
@@ -28,3 +28,12 @@ jobs:
       uses: eskatos/gradle-command-action@v1
       with:
         arguments: convert
+
+    - name: Publish
+      run:
+        ./gradlew wordPressUpload -Pwordpress-host='"${WORDPRESS_HOST}"' -Pwordpress-username='"${WORDPRESS_USER}"' -Pwordpress-password='"${WORDPRESS_PASSWORD}"' -Pstage=production --stacktrace
+      env:
+        WORDPRESS_USER: "${{ secrets.WORDPRESS_USER }}"
+        WORDPRESS_PASSWORD: "${{ secrets.WORDPRESS_PASSWORD }}"
+        WORDPRESS_HOST: "neo4j.com"
+        no_proxy: "neo4j.com"
