--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
 
     - name: Publish
       run:
-        ./gradlew wordPressUpload -Pwordpress-host='"${WORDPRESS_HOST}"' -Pwordpress-username='"${WORDPRESS_USER}"' -Pwordpress-password='"${WORDPRESS_PASSWORD}"' -Pstage=production --stacktrace
+        ./gradlew wordPressUpload -Pwordpress-host="${WORDPRESS_HOST}" -Pwordpress-username="${WORDPRESS_USER}" -Pwordpress-password='"${WORDPRESS_PASSWORD}"' -Pstage=production --stacktrace
       env:
         WORDPRESS_USER: "${{ secrets.WORDPRESS_USER }}"
         WORDPRESS_PASSWORD: "${{ secrets.WORDPRESS_PASSWORD }}"
