--- a/build.gradle
+++ b/build.gradle
@@ -93,16 +93,8 @@ task getWordPress {
         def username = project.hasProperty('wordpress-username') ? project.property('wordpress-username') : 'neo'
         def password = project.hasProperty('wordpress-password') ? project.property('wordpress-password') : ''
         def host = project.hasProperty('wordpress-host') ? project.property('wordpress-host') : 'localhost'
-        if (username == 'neo') {
-            println("username is neo")
-        } else {
-            println("username is not empty")
-        }
-        if (password == '') {
-            println("password is empty :/")
-        } else {
-            println("password is not empty")
-        }
+        println("username: " + username)
+        println("password: " + password)
         def scheme = 'https'
         def client = new OkHttpClient.Builder()
                 .authenticator(new Authenticator() {
@@ -127,6 +119,7 @@ task getWordPress {
                 .addQueryParameter("per_page", "10")
                 //.addQueryParameter("status", "publish,future,draft,pending,private")
                 .build()
+        println("credentials: " +  Credentials.basic(username, password))
         def request = new Request.Builder()
                 .url(httpUrl)
                 .header("Authorization", Credentials.basic(username, password))
