--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,15 @@ jobs:
       with:
         arguments: convert
 
+    - name: Publish (script)
+      run:
+        ./publish.sh
+      env:
+        WORDPRESS_USER: ${{ secrets.WORDPRESS_USER }}
+        WORDPRESS_PASSWORD: ${{ secrets.WORDPRESS_PASSWORD }}
+        WORDPRESS_HOST: "neo4j.com"
+        no_proxy: "neo4j.com"
+
     - name: Publish
       run:
         ./gradlew wordPressUpload -Pwordpress-host="$WORDPRESS_HOST" -Pwordpress-username="$WORDPRESS_USER" -Pwordpress-password="$WORDPRESS_PASSWORD" -Pstage=production --stacktrace
