--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,10 +20,8 @@ jobs:
       run: curl neo4j.com
 
     - name: Test
-      uses: eskatos/gradle-command-action@v1
-      with:
-        arguments: wordPressUpload -Pwordpress-host="neo4j.com" -Pwordpress-username="$WORDPRESS_USER" -Pwordpress-password="$WORDPRESS_PASSWORD" -Pstage=production --stacktrace
+      run:
+        ./gradlew wordPressUpload -Pwordpress-host="neo4j.com" -Pwordpress-username="$WORDPRESS_USER" -Pwordpress-password="$WORDPRESS_PASSWORD" -Pstage=production --stacktrace
       env:
         WORDPRESS_USER: ${{ secrets.WORDPRESS_USER }}
         WORDPRESS_PASSWORD: ${{ secrets.WORDPRESS_PASSWORD }}
-        no_proxy: "neo4j.com"
